ms-auth: add test adapter user